--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Projection Template</title>
+    <link rel="icon" href="images/header/pic-2.png">
+    <title>GreePO. Architectural bureau</title>
 </head>
 
 <body>
@@ -106,21 +107,21 @@
             <div class="collage__inner">
                 <h1 class="title">Our Projects</h1>
                 <div class="collage__content">
-                    <div class="collage__item-1 collage__item"> <img class="collage__pic" src="images/collage/col1.jpg">
+                    <div class="collage__item collage__item-1"> <img class="collage__pic" src="images/collage/col1.jpg">
                     </div>
-                    <div class="collage__item-2 collage__item"> <img class="collage__pic" src="images/collage/col2.jpg">
+                    <div class="collage__item collage__item-2"> <img class="collage__pic" src="images/collage/col2.jpg">
                     </div>
-                    <div class="collage__item-3 collage__item"><img class="collage__pic" src="images/collage/col3.jpg">
+                    <div class="collage__item collage__item-3"><img class="collage__pic" src="images/collage/col3.jpg">
                     </div>
-                    <div class="collage__item-4 collage__item"><img class="collage__pic" src="images/collage/col4.jpg">
+                    <div class="collage__item collage__item-4"><img class="collage__pic" src="images/collage/col4.jpg">
                     </div>
-                    <div class="collage__item-5 collage__item"><img class="collage__pic" src="images/collage/col5.jpg">
+                    <div class="collage__item collage__item-5"><img class="collage__pic" src="images/collage/col5.jpg">
                     </div>
-                    <div class="collage__item-6 collage__item"><img class="collage__pic" src="images/collage/col6.jpg">
+                    <div class="collage__item collage__item-6"><img class="collage__pic" src="images/collage/col6.jpg">
                     </div>
-                    <div class="collage__item-7 collage__item"><img class="collage__pic" src="images/collage/col7.jpg">
+                    <div class="collage__item collage__item-7"><img class="collage__pic" src="images/collage/col7.jpg">
                     </div>
-                    <div class="collage__item-8 collage__item"><img class="collage__pic" src="images/collage/col8.jpg">
+                    <div class="collage__item collage__item-8"><img class="collage__pic" src="images/collage/col8.jpg">
                     </div>
                 </div>
 
