The page adaptability to standard device sizes has been added.

--- a/index.html
+++ b/index.html
@@ -62,44 +62,38 @@
     </header>
 
     <!-- Main -->
-    <div class="main">
+    <main>
         <div class="container">
-            <div class="main__inner">
+            <div class="main__inner grid">
 
-                <!-- Content-block -->
-                <div class="content-block">
-                    <div class="main__content-logo">
-                        <img class="main__pic" src="images/icon_1.jpg" alt="">
-                    </div>
-                    <h4 class="title main__content-name">Smth One</h4>
-                    <p class="main__content-discrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque,
-                        eligendi?</p>
-
-                    <!-- Button -->
-                    <div class="btn">
-                        <a class="btn__link" href="#"> Learn More</a>
-                    </div>
+                <div class="main__logo img-1">
+                    <img class="main__pic" src="images/icon_1.jpg" alt="">
+                </div>
+                <h4 class="title main__content-name title1">Smth One</h4>
+                <p class="main__content-discrip text-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque,
+                    eligendi?</p>
+                <!-- Button -->
+                <div class="btn btn-grid btn-1">
+                    <a class="btn__link" href="#">Learn More</a>
                 </div>
 
-                <!-- Content-block -->
-                <div class="content-block">
-                    <div class="main__content-logo">
-                        <img class="main__pic" src="images/icon_2.jpg" alt="">
-                    </div>
-                    <h4 class="title main__content-name">Smth Two</h4>
-                    <p class="main__content-discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-                        tempora fuga soluta est commodi.</p>
-
-                    <!-- Button -->
-                    <div class="btn">
-                        <a class="btn__link" href="#"> Learn More</a>
-                    </div>
+                <div class="main__logo img-2">
+                    <img class="main__pic" src="images/icon_2.jpg" alt="">
                 </div>
+                <h4 class="title main__content-name title-2">Smth Two</h4>
+                <p class="main__content-discrip text-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    tempora fuga soluta est commodi...</p>
+                <!-- Button -->
+                <div class="btn btn-grid btn-2">
+                    <a class="btn__link" href="#">Learn More</a>
+                </div>
+
+                
 
             </div>
 
         </div>
-    </div>
+    </main>
 
     <!-- Collage -->
     <div class="collage">
