Add floating buttons and design the Projects section by creating a gallery for viewing images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+     <!-- Floating button -->
+     <div class="btn--fixed btn--fixed--left">
+        <a class="btn__link btn__link--fixed" href="#">Up</a>
+    </div>
+
+    <!-- Floating button -->
+    <div class="btn--fixed btn--fixed--right">
+        <a class="btn__link btn__link--fixed" href="#">Submit a request</a>
+    </div>
+
+
+    
 
     <!-- Header -->
     <header>
