Added README.md and minor visual changes.

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,14 @@
         <a class="btn__link btn__link--fixed" href="#">Up</a>
     </div>
 
+    <script>
+        var age = prompt("How old are you?");
+        if (age == null)
+            console.log("Age not specified")
+        else
+            document.write("You are " + age);
+    </script>
+
     <!-- Floating button -->
     <div class="btn--fixed btn--fixed--right">
         <a class="btn__link btn__link--fixed" href="#">Submit a request</a>
