--- a/projects.html
+++ b/projects.html
@@ -11,31 +11,14 @@
 </head>
 
 <body>
-     <!-- Floating button -->
-     <div class="btn--fixed btn--fixed--left">
+    <!-- Floating button -->
+    <div class="btn--fixed btn--fixed--left">
         <a class="btn__link btn__link--fixed" href="#">Up</a>
     </div>
 
     <!-- Floating button -->
     <div class="btn--fixed btn--fixed--right">
-        <a class="btn__link btn__link--fixed" onclick="openForm()">Submit a request</a>
-    </div>
-
-    <div id="blackout"></div>
-
-    <div class="form-popup" id="popup">
-        <form action="#" class="form-container">
-            <button type="button" class="btn btn__link btn-close" onclick="closeForm()"><b>+</b></button>
-            <label for="name"><b>Name</b></label>
-            <input type="text" placeholder="Your name" name="name" required>
-            <label for="email"><b>E-mail</b></label>
-            <input type="email" placeholder="Your e-mail" name="email" required>
-            <label for="name"><b>What do we have to work with?</b></label>
-            <input type="text" placeholder="The subject of the work" name="name" required>
-            <label for="name"><b>Message</b></label>
-            <input type="text" placeholder="Your message" name="name" required>
-            <button type="submit" class="btn btn__link btn-popup"><b>Submit a request</b></button>
-        </form>
+        <a class="btn__link btn__link--fixed" onclick="openForm('popup-request')">Submit a request</a>
     </div>
 
     <!-- Header -->
@@ -151,10 +134,14 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid, explicabo laudantium, illum nihil quasi porro eos itaque.</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente
+                                velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo
+                                deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid,
+                                explicabo laudantium, illum nihil quasi porro eos itaque.</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -180,10 +167,11 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorum?</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Consequatur, dolorum?</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -219,10 +207,12 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet nemo?</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                                voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet
+                                nemo?</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -248,10 +238,14 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid, explicabo laudantium, illum nihil quasi porro eos itaque.</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente
+                                velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo
+                                deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid,
+                                explicabo laudantium, illum nihil quasi porro eos itaque.</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -287,10 +281,12 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet nemo?</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                                voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet
+                                nemo?</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -316,10 +312,14 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid, explicabo laudantium, illum nihil quasi porro eos itaque.</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente
+                                velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo
+                                deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid,
+                                explicabo laudantium, illum nihil quasi porro eos itaque.</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -355,10 +355,12 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet nemo?</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                                voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet
+                                nemo?</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -384,10 +386,14 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid, explicabo laudantium, illum nihil quasi porro eos itaque.</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente
+                                velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo
+                                deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid,
+                                explicabo laudantium, illum nihil quasi porro eos itaque.</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -423,10 +429,12 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet nemo?</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                                voluptatibus. Magni sunt fuga delectus hic odio voluptate repellendus incidunt quas amet
+                                nemo?</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -452,10 +460,14 @@
                                         <li><a href="#slide5"><img src="images/projections/exmpl-5.jpg" /></a></li>
                                     </ul>
                                 </div>
-                               <!-- End-Gallery -->
+                                <!-- End-Gallery -->
 
                             </div>
-                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid, explicabo laudantium, illum nihil quasi porro eos itaque.</p>
+                            <p class="project__discrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                non facere nulla reprehenderit architecto nostrum iste cupiditate voluptas sapiente
+                                velit atque repudiandae aspernatur debitis nemo dolores eaque tenetur saepe, quo
+                                deleniti at in ad assumenda voluptates dolor. Expedita amet voluptate, alias aliquid,
+                                explicabo laudantium, illum nihil quasi porro eos itaque.</p>
                         </div>
                         <!-- End-Project# -->
 
@@ -469,6 +481,23 @@
             </div>
         </div>
     </main>
+
+    <div id="blackout"></div>
+    <!-- Modal-window-for-request -->
+    <div class="form-popup" id="popup-request">
+        <form action="#" class="form-container">
+            <button type="button" class="btn btn__link btn-close" onclick="closeForm('popup-request')"><b>+</b></button>
+            <label for="name"><b>Name</b></label>
+            <input type="text" placeholder="Your name" name="name" required>
+            <label for="email"><b>E-mail</b></label>
+            <input type="email" placeholder="Your e-mail" name="email" required>
+            <label for="name"><b>What do we have to work with?</b></label>
+            <input type="text" placeholder="The subject of the work" name="name" required>
+            <label for="name"><b>Message</b></label>
+            <input type="text" placeholder="Your message" name="name" required>
+            <button type="submit" class="btn btn__link btn-popup"><b>Submit a request</b></button>
+        </form>
+    </div>
 
     <!-- Footer -->
     <div class="footer footer--white">
@@ -485,7 +514,7 @@
                     <a class="footer__link" href="#">
                         <img class="footer__pic" src="images/footer/instagram-64x64.png" alt="">
                     </a>
-                    
+
                 </div>
 
                 <div class="footer-logo-inner">
@@ -500,11 +529,12 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__in footer__in--white"> © 2020. Created by PHILIPPOVA.<br>Only free images are used on the web page. All images are used as an example and selected randomly.</p>
-            
+            <p class="footer__in footer__in--white"> © 2020. Created by PHILIPPOVA.<br>Only free images are used on the
+                web page. All images are used as an example and selected randomly.</p>
+
         </div>
     </div>
 
-   </body>
+</body>
 
 </html>
